removed this is not react text

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,7 @@
   <title>RPSLS-RESTful</title>
 </head>
 <body>
-  <div id="app">
-    Not React!
-  </div>
+  <div id="app"></div>
   <script src="dist/bundle.js"></script>
 </body>
 </html>
