--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> -->
   <title>RPSLS-RESTful</title>
 </head>
 <body>
